HV-1648 Reenable WildFly integration tests for JDK 11